--- a/buying.html
+++ b/buying.html
@@ -22,12 +22,13 @@
 </head>
 
 <body>
+    <div class="bgboxx">
 
     <div class="col-12 col-md-6 text-center container bgboxx pt-5 pb-5"> <!-- กล่องใบแรกสีเหลือง -->
         <div>
-                <p class="biggerpls"> ช่องทางการสั่งซื้อ </p>
+                <p class="biggerpls1"> ช่องทางการสั่งซื้อ </p>
 
-                <img src="images/forsell.jpg" alt="book" class="rounded-shadow mb-5" width="400">
+                <img src="images/forsell.jpg" alt="book" class="rounded-shadow1 mb-5" width="520">
         </div>
 
         <div>
@@ -40,8 +41,7 @@
         
         </div>       
     </div>
-
-
+    </div>
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
                     crossorigin="anonymous"></script>
